--- a/Framework/test-output/old/Default suite/methods.html
+++ b/Framework/test-output/old/Default suite/methods.html
@@ -1,18 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c49fae">  <td>19/07/24 19:34:19</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupFile()[pri:0, instance:com.website.testcases.LoginTest@52aa2946]">&gt;&gt;setupFile</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@558922244</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/07/24 19:34:19</td>   <td>608</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.website.testcases.LoginTest@52aa2946]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@558922244</td>   <td></td> </tr>
-<tr bgcolor="8df37b">  <td>19/07/24 19:34:36</td>   <td>17097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TestLogin()[pri:1, instance:com.website.testcases.LoginTest@52aa2946]">TestLogin</td> 
-  <td>main@558922244</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/07/24 19:34:50</td>   <td>30915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod(org.testng.ITestResult)[pri:0, instance:com.website.testcases.LoginTest@52aa2946]">&lt;&lt;TearDownMethod</td> 
-<td>&nbsp;</td>  <td>main@558922244</td>   <td></td> </tr>
-<tr bgcolor="8df37b">  <td>19/07/24 19:34:50</td>   <td>31359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TestLoginWithWrongCed()[pri:2, instance:com.website.testcases.LoginTest@52aa2946]">TestLoginWithWrongCed</td> 
-  <td>main@558922244</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/07/24 19:35:02</td>   <td>42816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod(org.testng.ITestResult)[pri:0, instance:com.website.testcases.LoginTest@52aa2946]">&lt;&lt;TearDownMethod</td> 
-<td>&nbsp;</td>  <td>main@558922244</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/07/24 19:35:02</td>   <td>43030</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.website.testcases.LoginTest@52aa2946]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@558922244</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>19/07/25 21:13:08</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupFile()[pri:0, instance:com.website.testcases.SignUpTest@75f9eccc]">&gt;&gt;setupFile</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>19/07/25 21:13:09</td>   <td>548</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.website.testcases.SignUpTest@75f9eccc]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
+<tr bgcolor="8df37b">  <td>19/07/25 21:13:20</td>   <td>11922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpTest.TestSignUp()[pri:0, instance:com.website.testcases.SignUpTest@75f9eccc]">TestSignUp</td> 
+  <td>main@107241811</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>19/07/25 21:13:31</td>   <td>22946</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod(org.testng.ITestResult)[pri:0, instance:com.website.testcases.SignUpTest@75f9eccc]">&lt;&lt;TearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>19/07/25 21:13:32</td>   <td>23397</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.website.testcases.SignUpTest@75f9eccc]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
 </table>
