--- a/Framework/test-output/old/Suite/methods-alphabetical.html
+++ b/Framework/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c49fae">  <td>19/07/24 10:20:29</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.website.testcases.LoginWithWrongCred@75f9eccc]">&lt;&lt;TearDown</td> 
+<tr bgcolor="c49fae">  <td>19/07/25 21:17:15</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.website.testcases.SignUpTest@75f9eccc]">&lt;&lt;TearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/07/24 10:20:29</td>   <td>-507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod(org.testng.ITestResult)[pri:0, instance:com.website.testcases.LoginWithWrongCred@75f9eccc]">&lt;&lt;TearDownMethod</td> 
+<tr bgcolor="c49fae">  <td>19/07/25 21:17:15</td>   <td>-426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod(org.testng.ITestResult)[pri:0, instance:com.website.testcases.SignUpTest@75f9eccc]">&lt;&lt;TearDownMethod</td> 
 <td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
-<tr bgcolor="8df37b">  <td>19/07/24 10:20:19</td>   <td>-10604</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginWithWrongCred.TestLoginWithWrongCed()[pri:2, instance:com.website.testcases.LoginWithWrongCred@75f9eccc]">TestLoginWithWrongCed</td> 
+<tr bgcolor="8df37b">  <td>19/07/25 21:17:04</td>   <td>-11410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpTest.TestSignUp()[pri:0, instance:com.website.testcases.SignUpTest@75f9eccc]">TestSignUp</td> 
   <td>main@107241811</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/07/24 10:20:08</td>   <td>-21376</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.website.testcases.LoginWithWrongCred@75f9eccc]">&gt;&gt;setup</td> 
+<tr bgcolor="c49fae">  <td>19/07/25 21:16:53</td>   <td>-22179</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.website.testcases.SignUpTest@75f9eccc]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/07/24 10:20:07</td>   <td>-22022</td> <td title="&gt;&gt;BaseClass.setupFile()[pri:0, instance:com.website.testcases.LoginWithWrongCred@75f9eccc]">&gt;&gt;setupFile</td> 
+<tr bgcolor="c49fae">  <td>19/07/25 21:16:52</td>   <td>-22788</td> <td title="&gt;&gt;BaseClass.setupFile()[pri:0, instance:com.website.testcases.SignUpTest@75f9eccc]">&gt;&gt;setupFile</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
 </table>
